updated SQL to query to use a CTE and now requires a game profile UUID for all associated game file uploads. Updated docker container from 643MB > 225MB